2003-12-18  Dan Winship  <danw@ximian.com>

	* testgtkhtml.c (main): s/soup_session_new/soup_session_async_new/

2003-12-15  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c (text_size): use font metrics for
	ascent/descent

	* gtkhtml.c (gtk_html_set_fonts): don't scale font size down

2003-12-12  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (gtk_html_im_preedit_changed_cb): updated, should be
	OK now

	* htmlengine-edit.c (html_engine_selection_stack_top): new
	function, it gets cursor and mark's positions from top of
	selection stack
	(html_engine_selection_stack_top_modify): new function for
	modifying cursor and mark's positions on top of selection stack

2003-12-10  Yong Sun <Yong.Sun@sun.com>

	* htmlengine-edit-cursor.c: correct the calculation of
	cursor's height

2003-12-08  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_op_cut_helper): remove spell errors from
	outside of cutted text

2003-12-05  Larry Ewing  <lewing@ximian.com>

	* htmltext.c (save_text_part): don't leak the dup'd string.

2003-12-05  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_flush): as below

	* gtkhtml.c (gtk_html_flush): new method, does all scheduled
	parsing

2003-12-04  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (selection_get): explicitly append a string terminator
	to the buffer to make newer mozillas happy.

2003-12-03  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c:  Use parser_clue whereever the the parser is
	actively adding elements.  Us the generic clue where the display
	engine is processing.

	* htmlengine.h: add parser_clue to hold the root of the current
	block.
	
2003-12-03  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (get_font_size): scale font size down from pango
	metric

	* htmlgdkpainter.c (alloc_font): don't scale font size up, it's
	already in pango metric now

	* htmlfontmanager.c (get_real_font_size): keep size in pango
	metric

	* htmltext.c (html_pango_attr_font_size_calc): pango is using